// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BpkCalendarNav should disable inputs when disabled 1`] = `
<div
  className="bpk-calendar-nav"
>
  <div
    className="bpk-calendar-nav__nudger"
  >
    <button
      className="bpk-calendar-nav__button"
      disabled={true}
      id="myCalendarNav_month_nudger_previous"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="bpk-calendar-nav__icon"
        height="24"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 17.293V6.707c0-1.454-1.638-2.24-2.701-1.296l-5.724 5.081a1.75 1.75 0 0 0-.049 2.547l5.724 5.505c1.049 1.009 2.75.235 2.75-1.251z"
        />
      </svg>
      <span
        className="bpk-calendar-nav__text--hidden"
      >
        January 2010
      </span>
    </button>
  </div>
  <div
    className="bpk-calendar-nav__month"
  >
    <label
      className="bpk-calendar-nav__text--hidden"
      htmlFor="myCalendarNav_select"
    >
      Change month
    </label>
    <select
      aria-invalid={false}
      className="bpk-select"
      disabled={true}
      id="myCalendarNav_select"
      name="months"
      onChange={[Function]}
      value="2010-02"
    >
      <option
        value="2010-02"
      >
        February 2010
      </option>
      <option
        value="2010-03"
      >
        March 2010
      </option>
    </select>
  </div>
  <div
    className="bpk-calendar-nav__nudger"
  >
    <button
      className="bpk-calendar-nav__button"
      disabled={true}
      id="myCalendarNav_month_nudger_next"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="bpk-calendar-nav__icon"
        height="24"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 17.293V6.707c0-1.454 1.638-2.24 2.701-1.296l5.724 5.081a1.75 1.75 0 0 1 .049 2.547L9.75 18.544C8.7 19.553 7 18.779 7 17.293z"
        />
      </svg>
      <span
        className="bpk-calendar-nav__text--hidden"
      >
        March 2010
      </span>
    </button>
  </div>
</div>
`;

exports[`BpkCalendarNav should render correctly 1`] = `
<div
  className="bpk-calendar-nav"
>
  <div
    className="bpk-calendar-nav__nudger"
  >
    <button
      className="bpk-calendar-nav__button"
      disabled={true}
      id="myCalendarNav_month_nudger_previous"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="bpk-calendar-nav__icon"
        height="24"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 17.293V6.707c0-1.454-1.638-2.24-2.701-1.296l-5.724 5.081a1.75 1.75 0 0 0-.049 2.547l5.724 5.505c1.049 1.009 2.75.235 2.75-1.251z"
        />
      </svg>
      <span
        className="bpk-calendar-nav__text--hidden"
      >
        January 2010
      </span>
    </button>
  </div>
  <div
    className="bpk-calendar-nav__month"
  >
    <label
      className="bpk-calendar-nav__text--hidden"
      htmlFor="myCalendarNav_select"
    >
      Change month
    </label>
    <select
      aria-invalid={false}
      className="bpk-select"
      disabled={false}
      id="myCalendarNav_select"
      name="months"
      onChange={[Function]}
      value="2010-02"
    >
      <option
        value="2010-02"
      >
        February 2010
      </option>
      <option
        value="2010-03"
      >
        March 2010
      </option>
    </select>
  </div>
  <div
    className="bpk-calendar-nav__nudger"
  >
    <button
      className="bpk-calendar-nav__button"
      disabled={false}
      id="myCalendarNav_month_nudger_next"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="bpk-calendar-nav__icon"
        height="24"
        style={
          Object {
            "height": "1.5rem",
            "width": "1.5rem",
          }
        }
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 17.293V6.707c0-1.454 1.638-2.24 2.701-1.296l5.724 5.081a1.75 1.75 0 0 1 .049 2.547L9.75 18.544C8.7 19.553 7 18.779 7 17.293z"
        />
      </svg>
      <span
        className="bpk-calendar-nav__text--hidden"
      >
        March 2010
      </span>
    </button>
  </div>
</div>
`;
